force-app/main/default/objects/MUSW__Inspection__c/fields/Checklist_Type__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Type__c</fullName>
    <label>Checklist Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Helen Checklist</fullName>
            </value>
            <value>
                <fullName>Restaurant Checklist</fullName>
            </value>
            <value>
                <fullName>Business - Other Checklist</fullName>
            </value>
            <value>
                <fullName>Lodging Checklist</fullName>
            </value>
            <value>
                <fullName>Subquestions Checklist</fullName>
            </value>
            <value>
                <fullName>Optional Questions</fullName>
            </value>
            <value>
                <fullName>Business Checklist</fullName>
            </value>
            <value>
                <fullName>{MUSW__Inspection__c.Checklist_Type__c}</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>