force-app/main/default/objects/MUSW__Inspection__c/fields/Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Completed_DateTime__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>