force-app/main/default/objects/MUSW__Inspection__c/fields/Inspection_Chain_Closed__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Chain_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Chain Closed</label>
    <type>Checkbox</type>
</CustomField>