force-app/main/default/objects/MUSW__Inspection__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>CASE( MUSW__Status__c , 

"Pending","No", 
"Scheduled","No", 
"Not Requested","No", 
"Requested","No", 

"Yes")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed</label>
    <type>Text</type>
</CustomField>