force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__AlertCode__c.field-meta.xml
<CustomField>
    <fullName>MUSW__AlertCode__c</fullName>
    <description>Contains the Code of the Alert. 0 is GREEN Alert.</description>
    <label>Alert</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>