force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Closed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Closed_DateTime__c</fullName>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>