force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>