force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Duration__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Duration__c</fullName>
    <label>Duration</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>