force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__On_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>MUSW__On_Itinerary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Itinerary</label>
    <type>Checkbox</type>
</CustomField>