force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Order__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>