force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Priority__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 High</fullName>
            </value>
            <value>
                <fullName>2 Normal</fullName>
                <default>true</default>
                <label>2 Normal</label>
            </value>
            <value>
                <fullName>1 Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>