force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Scheduled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Scheduled_Start_Date__c</fullName>
    <label>Scheduled Start Date</label>
    <type>Date</type>
</CustomField>