force-app/main/default/objects/MUSW__Inspection__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complaint Inspection</fullName>
            </value>
            <value>
                <fullName>Reinspection</fullName>
            </value>
            <value>
                <fullName>Site Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>