force-app/main/default/objects/MUSW__Inspection__c/fields/Pass_Fail__c.field-meta.xml
<CustomField>
    <fullName>Pass_Fail__c</fullName>
    <formula>CASE( MUSW__Status__c, 

"Failed","Failed", 
"Passed","Passed", 
"Stop Work","Failed", 
"Closed","Passed", 

"")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass/Fail</label>
    <type>Text</type>
</CustomField>