force-app/main/default/objects/MUSW__Inspection__c/fields/Reinspection_Count__c.field-meta.xml
<CustomField>
    <fullName>Reinspection_Count__c</fullName>
    <label>Inspection Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>