force-app/main/default/objects/MUSW__Inspection__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <formula>IF(OR(ISNULL( MUSW__Permit__c ), MUSW__Permit__c = ""), 
If(OR(ISNULL( MUSW__Complaint2__c ), MUSW__Complaint2__c = ""), 
IF(OR(ISNULL( MUSW__License2__c ), MUSW__License2__c = ""), 
"", HYPERLINK( "../" &amp; MUSW__License2__c, MUSW__License2__r.Name ,"_parent" )), 
HYPERLINK( "../" &amp; MUSW__Complaint2__c,MUSW__Complaint2__r.Name,"_parent" )), 
HYPERLINK( "../" &amp; MUSW__Permit__c,MUSW__Permit__r.Name,"_parent" ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To</label>
    <type>Text</type>
</CustomField>