force-app/main/default/objects/MUSW__Inspection__c/fields/Requested_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Requested_DateTime__c</fullName>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>