force-app/main/default/objects/MUSW__Inspection__c/recordTypes/Codes_Zoning.recordType-meta.xml
<RecordType>
    <fullName>Codes_Zoning</fullName>
    <active>true</active>
    <label>Codes / Zoning</label>
</RecordType>