force-app/main/default/objects/MUSW__Inspection__c/listViews/MUSW__All_Inspections.listView-meta.xml
<ListView>
    <fullName>MUSW__All_Inspections</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Priority__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Due_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>